# stimma

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  README.md  config.default.yaml  icon.icns  prompts.yaml  setup.sh
backend/: __init__.py  account_sync.py  agent_state.py  agent_tool_implementations.py  agent_tools.py  alembic.ini  app_context.py  app_dirs.py  asset_association_service.py  asset_deletion_service.py  asset_doctor.py  asset_migration.py  asset_service.py  auth_storage.py  backend_registry.py  background_work_filters.py  board_service.py  chat_deletion_service.py  cleanup_service.py  clip_service.py  cloud_api.py  cloud_events.py  cloud_runtime.py  compliance_region.py  config.py  config_version.py  config_writer.py  container_service.py  content_policy.py  controlnet.py  crash_reports.py  database.py  database_registry.py  delete_operations.py  distribution.py  editor_service.py  endpoint_class.py  exif_extractor.py  face_detection_service.py  face_onnx.py  (+65 more)
backend/agent/: __init__.py  context.py  hitl.py  jobs.py
backend/alembic/: env.py
backend/core/: app.py  dependencies.py  logging.py  middleware.py  profile_context.py  request_metrics.py  session_context.py  session_middleware.py  slowtrace.py
backend/darkroom/: ops.py  tools.py
backend/dwpose/: __init__.py  coco133.py  runtime.py  skeleton.py
backend/filters/: __init__.py  defs.py  ops.py  schemas.py  video_ops.py
backend/flow_dsl/: __init__.py  context.py  errors.py  loader.py  primitives.py  shapes.py  versions.py
backend/flow_runtime/: __init__.py  directory.py  dry_run.py  dsl.py  engine.py  ephemeral.py  equation_store.py  evaluators.py  foreach_expansion.py  graph.py  graph_builder.py  graph_db.py  graph_diff.py  keys.py  layout_bundle.py  media_arg.py  oneshot.py  paths.py  production_evaluators.py  runtime.py  state_db.py  step_timeline.py  store_key.py  summary.py
backend/models/: api_models.py
backend/postprocessing/: __init__.py  builtin_filters.py  executor.py  filter_defs.py
backend/providers/: __init__.py  base.py  health.py  jsonrpc.py  jsonrpc_manager.py  lightweight.py  registry.py  test_provider.py  user_tools.py
backend/recipe_dsl/: __init__.py  context.py  errors.py  loader.py  primitives.py  shapes.py  versions.py
backend/recipe_runtime/: __init__.py  directory.py  dry_run.py  dsl.py  engine.py  equation_store.py  evaluators.py  foreach_expansion.py  graph.py  graph_builder.py  graph_db.py  graph_diff.py  keys.py  layout_bundle.py  media_arg.py  paths.py  production_evaluators.py  runtime.py  state_db.py  step_timeline.py  store_key.py  summary.py
backend/routes/: admin.py  assets.py  auth.py  boards.py  chats.py  cloud.py  feedback.py  flags.py  flows.py  generation.py  keywords.py  markers.py  mask_assistant.py  media.py  media_files.py  models.py  postprocessing.py  preferences.py  presets.py  processing.py  profiles.py  projects.py  prompt_enhancement.py  realtime.py  recipes.py  saved_views.py  search.py  settings.py  share.py  skill_marketplace.py  stimpack_marketplace.py  tags.py  tasks.py  telemetry.py  tools.py  trash.py  user_tools.py
backend/services/: database_maintenance.py
backend/tasks/: __init__.py  parameters.py  schemas.py  types.py
backend/tests/: conftest.py  test_account_sync.py  test_agent_v2_code_lint.py  test_agent_v2_config.py  test_agent_v2_context_compression.py  test_agent_v2_input_import.py  test_agent_v2_library.py  test_agent_v2_llm_options.py  test_agent_v2_media_info.py  test_agent_v2_notepad.py  test_agent_wrapper_artifact_context.py  test_alembic_integrity.py  test_assembled_container_paths.py  test_asset_backfill.py  test_asset_doctor.py  test_asset_expiration.py  test_asset_media_contract.py  test_asset_migration.py  test_asset_service.py  test_asset_startup_backfill.py  test_assets_api.py  test_audio_metadata.py  test_auth.py  test_background_work.py  test_batch.py  test_boards.py  test_browse_filters.py  test_call_tool_recovery.py  test_chat_autonaming.py  test_chat_delete_from_here.py  test_chat_deletion_service.py  test_chat_retry.py  test_chat_workspaces.py  test_chats_response_model.py  test_cleanup_husks.py  test_cloud_provider_auth.py  test_cloud_runtime.py  test_config_sources.py  test_config_validators.py  test_container_service.py  (+110 more)
backend/tests_transition/: __init__.py  cv2_reference.py  prove_cv2_removal.py
backend/tools/: validate_llm.py
backend/utils/: background_tasks.py  http_headers.py  image_ops.py  keyword_blocklist.py  lineage.py  macos_permissions.py  migrations.py  mse_loop.py  query_builder.py  similarity.py  ui_render.py  video_frames.py  websocket.py
src-tauri/: Cargo.toml  Info.dev.plist  build-watchdog.sh  build.rs  tauri.conf.json
(+802 files in other folders)
