[project]
name = "stimma-backend"
version = "0.1.0"
description = "Stimma backend - AI-powered visual media copilot"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "sse-starlette==1.8.2",
    "websockets==12.0",
    "aiohttp==3.9.1",
    # Database
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy async
    "alembic",
    # Data validation & config
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "ruamel.yaml>=0.18.0",
    # Image processing
    "pillow>=10.2.0",  # 10.2.0 fixes libjpeg-turbo 3.0.0 JPEG corruption on Mac ARM
    "piexif==1.1.3",
    # ML/AI (ONNX-based - no PyTorch)
    # Note: scipy, onnx, imgviz come transitively from osam/rembg
    "numpy>=1.26.2",
    "onnxruntime",
    "scikit-image>=0.23.2,<0.24",
    "onnx-clip",
    "osam>=0.2.5",
    # Video processing
    "ffmpeg-python==0.2.0",
    # LLM (httpx used directly for OpenAI-compatible API calls)
    # Model hub (face detection, SAM3 model downloads)
    "huggingface-hub",
    # Logging
    "structlog",
    # Security
    "bcrypt>=4.0.0",
    # Markdown front matter parsing
    "python-frontmatter>=1.0.0",
    # Markdown to plaintext conversion
    "strip-markdown>=1.3",
    # Web search & fetch (agent v2)
    "ddgs>=8.0",
    "trafilatura>=2.0",
    "onnx<1.18",
    "rich>=14.3.2",
    # HTML to PNG rendering (agent v2)
    "weasyprint>=62.0",
    "pypdfium2>=4.0",
    "secretstorage>=3.3 ; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.14",
]
cv2-parity = [
    "opencv-python-headless==4.11.0.86",
]

[tool.ruff.lint]
# Crash-class rules only: syntax errors, undefined names, broken comparisons.
# These are always real bugs — CI fails on them. Style rules are intentionally
# not enabled.
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests", "agent/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
