[package]
name = "stimma"
version = "0.1.0"
description = "Stimma - AI-powered visual media copilot"
authors = ["stimmant <stimmant@stimma.ai>"]
license = "AGPL-3.0-only"
repository = "https://github.com/stimma-ai/stimma"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stimma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = ["devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-drag = "2.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2.10.0"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
crc32fast = "1.4"
sherpa-onnx = "1.13.3"

# Whisper is built with Metal acceleration on macOS and CPU elsewhere.
# `whisper-cpp-log` routes whisper.cpp/ggml's internal logging (per-token decoder
# dumps, seek traces, etc.) through the `log` crate instead of letting it spew
# raw to stderr — see install_whisper_log_trampoline() in lib.rs.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.12", features = ["metal", "whisper-cpp-log"] }
uuid = { version = "=1.19.0", features = ["v4"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.12", features = ["whisper-cpp-log"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
